--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -16,7 +16,7 @@
     <ApplicationTitle>BolWallet</ApplicationTitle>
 
     <!-- App Identifier -->
-    <ApplicationId>com.companyname.bolwallet</ApplicationId>
+    <ApplicationId>org.1bol.bolwallet</ApplicationId>
     <ApplicationIdGuid>c5489447-fb64-49ba-8452-27a8e4dde81e</ApplicationIdGuid>
 
     <!-- Versions -->
@@ -37,9 +37,10 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-ios|AnyCPU'">
     <WarningsAsErrors />
-    <CodesignProvision>iOS Team Provisioning Profile: com.companyname.bolwallet</CodesignProvision>
     <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
+    <CreatePackage>false</CreatePackage>
+    <CodesignProvision>Automatic</CodesignProvision>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-maccatalyst|AnyCPU'">
@@ -56,6 +57,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-ios|AnyCPU'">
     <WarningsAsErrors />
+    <CreatePackage>false</CreatePackage>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-maccatalyst|AnyCPU'">
