--- a/BolWallet/Platforms/MacCatalyst/Info.plist
+++ b/BolWallet/Platforms/MacCatalyst/Info.plist
@@ -4,7 +4,6 @@
 <dict>
 	<key>UIDeviceFamily</key>
 	<array>
-		<integer>1</integer>
 		<integer>2</integer>
 	</array>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -29,6 +28,15 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
+		<string>processing</string>
 	</array>
+	<key>CFBundleVersion</key>
+	<string>2024.0120.0010</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.2.0</string>
+    <key>CFBundleDevelopmentRegion</key>
+    <string>en</string>
+    <key>NSHumanReadableCopyright</key>
+    <string>1bol.org © 2024</string>
 </dict>
 </plist>
