--- a/BolWallet/appsettings.json
+++ b/BolWallet/appsettings.json
@@ -1,6 +1,7 @@
 {
   "BolSettings": {
     "RpcEndpoint": "https://rpcnode.demo.bolchain.net",
+    "BolIdentityEndpoint": "https://identity.demo.bolchain.net",
     "Contract": ""
   }
 }
