Add support for development settings

--- a/BolWallet/appsettings.Development.json
+++ b/BolWallet/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "BolSettings": {
-    "RpcEndpoint": "",
+    "RpcEndpoint": "https://rpcnode.demo.bolchain.net",
+    "BolIdentityEndpoint": "https://localhost:5001",
     "Contract": ""
   }
 }
