--- a/BolWallet/appsettings.json
+++ b/BolWallet/appsettings.json
@@ -2,6 +2,8 @@
   "BolSettings": {
     "RpcEndpoint": "https://rpcnode.mainnet.bolchain.net",
     "BolIdentityEndpoint": "https://identity.demo.bolchain.net",
+    "BolExplorerEndpoint": "https://explorer.demo.bolchain.net",
+    "BolCertifierEndpoint": "https://certifier.demo.bolchain.net",
     "Contract": ""
   }
 }
