--- a/BolWallet/appsettings.Development.json
+++ b/BolWallet/appsettings.Development.json
@@ -2,8 +2,8 @@
   "BolSettings": {
     "RpcEndpoint": "https://rpcnode.mainnet.bolchain.net",
     "BolIdentityEndpoint": "https://localhost:5001",
-    "BolExplorerEndpoint": "https://explorer.demo.bolchain.net",
-    "BolCertifierEndpoint": "https://certifier.demo.bolchain.net",
+    "BolExplorerEndpoint": "https://explorer.mainnet.bolchain.net",
+    "BolCertifierEndpoint": "https://certifier.mainnet.bolchain.net",
     "Contract": ""
   }
 }
