--- a/BolWallet/Platforms/iOS/Entitlements.plist
+++ b/BolWallet/Platforms/iOS/Entitlements.plist
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>keychain-access-groups</key>
-        <array>
-            <string>$(AppIdentifierPrefix)com.microsoft.adalcache</string>
-        </array>
-    </dict>
+<dict>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.microsoft.adalcache</string>
+	</array>
+	<key>com.apple.security.device.camera</key>
+	<true/>
+	<key>com.apple.security.device.audio-input</key>
+	<true/>
+</dict>
 </plist>
-
