Revert bol identity url in dev settings

--- a/BolWallet/appsettings.Development.json
+++ b/BolWallet/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "BolSettings": {
     "RpcEndpoint": "https://rpcnode.mainnet.bolchain.net",
-    "BolIdentityEndpoint": "https://localhost:5001",
+    "BolIdentityEndpoint": "https://identity.mainnet.bolchain.net",
     "BolExplorerEndpoint": "https://explorer.mainnet.bolchain.net",
     "BolCertifierEndpoint": "https://certifier.mainnet.bolchain.net",
     "Contract": ""
