--- a/BolWallet/Platforms/MacCatalyst/Info.plist
+++ b/BolWallet/Platforms/MacCatalyst/Info.plist
@@ -42,5 +42,7 @@
 	<string>"Bol requires access to your camera."</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>"Bol requires access to your microphone."</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Bol requires access to photos gallery for picking photos.</string>
 </dict>
 </plist>
