--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -83,10 +83,10 @@
 
   <ItemGroup>
     <!-- App Icon -->
-    <MauiIcon Include="Resources\AppIcon\appicon.svg" BaseSize="128,128" />
+    <MauiIcon Include="Resources\AppIcon\appicon.svg" Color="White" BaseSize="128,128" />
 
     <!-- Splash Screen -->
-    <MauiSplashScreen Include="Resources\Images\bol_logo.png" Color="white" BaseSize="128,128" />
+    <MauiSplashScreen Include="Resources\Images\bol_logo.svg" Color="White" BaseSize="128,128" />
 
     <!-- Images -->
     <MauiImage Include="Resources\Images\*" />
