Update BolChain.Core version to 1.1.1

--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -212,7 +212,7 @@
   <ItemGroup>
     <PackageReference Include="akavache" Version="9.1.20" />
     <PackageReference Include="Blazing.Mvvm" Version="1.4.0" />
-    <PackageReference Include="BolChain.Core" Version="1.1.1-beta.1" />
+    <PackageReference Include="BolChain.Core" Version="1.1.1" />
     <PackageReference Include="CommunityToolkit.Maui" Version="8.0.1" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
