--- a/src/BolWallet/appsettings.json
+++ b/src/BolWallet/appsettings.json
@@ -1,9 +1,19 @@
 {
   "BolSettings": {
-    "RpcEndpoint": "https://rpcnode.mainnet.bolchain.net",
-    "BolIdentityEndpoint": "https://identity.mainnet.bolchain.net",
-    "BolExplorerEndpoint": "https://explorer.mainnet.bolchain.net",
-    "BolCertifierEndpoint": "https://certifier.mainnet.bolchain.net",
-    "Contract": ""
-  }
+    "Mainnet": {
+      "RpcEndpoint": "https://rpcnode.mainnet.bolchain.net",
+      "BolIdentityEndpoint": "https://identity.mainnet.bolchain.net",
+      "BolExplorerEndpoint": "https://explorer.mainnet.bolchain.net",
+      "BolCertifierEndpoint": "https://certifier.mainnet.bolchain.net",
+      "Contract": ""
+    },
+    "Testnet": {
+      "RpcEndpoint": "https://validator-1.testnet.bolchain.net",
+      "BolIdentityEndpoint": "https://identity.testnet.bolchain.net",
+      "BolExplorerEndpoint": "https://explorer.testnet.bolchain.net",
+      "BolCertifierEndpoint": "https://certifier.testnet.bolchain.net",
+      "Contract": ""
+    }
+  },
+  "UseMainnet": true
 }
