--- a/src/BolWallet/Platforms/MacCatalyst/Info.plist
+++ b/src/BolWallet/Platforms/MacCatalyst/Info.plist
@@ -39,10 +39,10 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>1bol.org © 2024</string>
 	<key>NSCameraUsageDescription</key>
-	<string>"Bol requires access to your camera."</string>
+	<string>The app can use the camera to take a photo of a document and use it when creating a new wallet.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>"Bol requires access to your microphone."</string>
+	<string>The app can use the microphone to record your voice and use it when creating a new wallet.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Bol requires access to photos gallery for picking photos.</string>
+	<string>The app can use the photo library to select photos from your library and use them when creating a new wallet.</string>
 </dict>
 </plist>
