Read countries and NIN specifications from wallet

--- a/src/BolWallet/BolWallet.csproj
+++ b/src/BolWallet/BolWallet.csproj
@@ -256,6 +256,8 @@
     <EmbeddedResource Include="appsettings.json" />
     <Content Remove="appsettings.Development.json" />
     <EmbeddedResource Include="appsettings.Development.json" />
+    <EmbeddedResource Include="Resources\Content\country_code.json" />
+    <EmbeddedResource Include="Resources\Content\nin.json" />
     <Content Remove="TestAccount.json" />
   </ItemGroup>
 
