Fix build issues for iOS/MacCatalyst from embedding new resource files

--- a/src/BolWallet/BolWallet.csproj
+++ b/src/BolWallet/BolWallet.csproj
@@ -259,7 +259,9 @@
     <EmbeddedResource Include="appsettings.json" />
     <Content Remove="appsettings.Development.json" />
     <EmbeddedResource Include="appsettings.Development.json" />
+    <Content Remove="Resources\Content\country_code.json" />
     <EmbeddedResource Include="Resources\Content\country_code.json" />
+    <Content Remove="Resources\Content\nin.json" />
     <EmbeddedResource Include="Resources\Content\nin.json" />
     <Content Remove="TestAccount.json" />
   </ItemGroup>
