Expand BolSettings to include mainnet/testnet settings

--- a/src/BolWallet/appsettings.Development.json
+++ b/src/BolWallet/appsettings.Development.json
@@ -1,9 +1,18 @@
 {
   "BolSettings": {
-    "RpcEndpoint": "https://rpcnode.mainnet.bolchain.net",
-    "BolIdentityEndpoint": "https://identity.mainnet.bolchain.net",
-    "BolExplorerEndpoint": "https://explorer.mainnet.bolchain.net",
-    "BolCertifierEndpoint": "https://certifier.mainnet.bolchain.net",
-    "Contract": ""
+    "mainnet": {
+      "RpcEndpoint": "https://rpcnode.mainnet.bolchain.net",
+      "BolIdentityEndpoint": "https://identity.mainnet.bolchain.net",
+      "BolExplorerEndpoint": "https://explorer.mainnet.bolchain.net",
+      "BolCertifierEndpoint": "https://certifier.mainnet.bolchain.net",
+      "Contract": ""
+    },
+    "testnet": {
+      "RpcEndpoint": "https://rpcnode.testnet.bolchain.net",
+      "BolIdentityEndpoint": "https://identity.testnet.bolchain.net",
+      "BolExplorerEndpoint": "https://explorer.testnet.bolchain.net",
+      "BolCertifierEndpoint": "https://certifier.testnet.bolchain.net",
+      "Contract": ""
+    }
   }
 }
