--- a/src/BolWallet/appsettings.json
+++ b/src/BolWallet/appsettings.json
@@ -8,7 +8,7 @@
       "Contract": ""
     },
     "testnet": {
-      "RpcEndpoint": "https://rpcnode.testnet.bolchain.net",
+      "RpcEndpoint": "https://validator-4.testnet.bolchain.net",
       "BolIdentityEndpoint": "https://identity.testnet.bolchain.net",
       "BolExplorerEndpoint": "https://explorer.testnet.bolchain.net",
       "BolCertifierEndpoint": "https://certifier.testnet.bolchain.net",
