Declare app doesn't use exempt encryption
HTTPs traffic is exempt from export documentation based on Apple's policy, so declaring NO covers the app's usage.

--- a/src/BolWallet/Platforms/MacCatalyst/Info.plist
+++ b/src/BolWallet/Platforms/MacCatalyst/Info.plist
@@ -44,5 +44,7 @@
 	<string>The app can use the microphone to record your voice and use it when creating a new wallet.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>The app can use the photo library to select photos from your library and use them when creating a new wallet.</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
