--- a/src/BolWallet/Platforms/iOS/Info.plist
+++ b/src/BolWallet/Platforms/iOS/Info.plist
@@ -42,5 +42,7 @@
     <string>en</string>
     <key>NSHumanReadableCopyright</key>
     <string>1bol.org © 2024</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
