--- a/src/BolWallet/Platforms/Android/AndroidManifest.xml
+++ b/src/BolWallet/Platforms/Android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.bol.bolwallet" android:versionCode="9" android:versionName="3.0.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.bol.bolwallet" android:versionCode="10" android:versionName="3.1.0 (2024.1204.2140)">
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true" android:label="BoL Wallet"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
